[package]
name = "rust-triangle-arbitrage-dashboard-tutorial"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tungstenite = { version = "0.17.3", features = ["rustls-tls-native-roots"] }
url = "2.1.0"
log = "0.4"
log4rs = { version = "1", features = ["background_rotation"] }
serde_yaml = "0.9.13"